[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-upload-tool" # Doit être unique sur PyPI
version = "0.1.1"
authors = [
  { name="Multi Upload Tool", email="contact@multi-upload-tool.com" },
]
description = "A Python SDK for Multi Upload Tool API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://multi-upload-tool.com"
Documentation = "https://docs.multi-upload-tool.com/sdk/python"
Repository = "https://github.com/DelityLuss/python-sdk"